Fix (Reviews) column layout issue

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -66,7 +66,7 @@ $tabs-boxed-link-radius: 6px
   // border: 1px solid black
 
 .columns
-  margin-top: 0 !important
+  margin: 0 !important
 
 #Columns
   @media only screen and (max-width: $tablet)
@@ -83,7 +83,8 @@ $tabs-boxed-link-radius: 6px
 
 .reviews
   border: 1px solid black
-  margin-top: .75rem
+  // margin-top: .75rem
+  margin: 0
   padding: 0 !important
 
   *
